# openmr

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle  test.py
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/jniCalls/: cubeActivity.cpp  gestureClass.cpp  myGLRenderer.cpp
app/src/main/cpp/nativeCode/common/: myGLCamera.cpp  myGLFunctions.cpp  myGLM.h  myJNIHelper.h
app/src/main/cpp/nativeCode/cube/: myCube.cpp  myCube.h
app/src/main/java/com/leilei/androidglm/: CubeActivity.java  GestureClass.java  MyGLRenderer.java  MyGLSurfaceView.java
app/src/main/res/layout/: activity_main.xml
easyshow3d/: build.gradle
eglcamera/: build.gradle
eglcamera/src/main/: AndroidManifest.xml
eglcamera/src/main/java/com/jscheng/scamera/: APP.java  BaseActivity.java
eglcamera/src/main/res/layout/: fragment_camera.xml
electron-quick-start/: h264.html  index.html  main.js  msg.proto  package-lock.json  package.json
gradle/wrapper/: gradle-wrapper.properties
opencvpnp/: build.gradle
opencvpnp/src/androidTest/java/com/example/open_cv/: ExampleInstrumentedTest.java
opencvpnp/src/main/: AndroidManifest.xml
opencvpnp/src/main/java/com/example/open_cv/: MainActivity.java
opencvpnp/src/main/res/layout/: activity_main.xml
opencvpnp/src/main/res/values/: strings.xml
opencvpnp/src/test/java/com/example/open_cv/: ExampleUnitTest.java
opencvsdk/: build.gradle
opencvsdk/java/src/org/opencv/android/: CameraBridgeViewBase.java  JavaCameraView.java
opencvsdk/java/src/org/opencv/jni/: JniBridge.java
opencvsdk/java/src/org/opencv/osgi/: OpenCVNativeLoader.java
opencvsdk/java/src/org/opencv/pnp/: PnpBridge.java
opencvsdk/libcxx_helper/: CMakeLists.txt  PNPsolver.cpp  PNPsolver.h  dummy.cpp
unityLibrary/: build.gradle
unityLibrary/libs/: unityhook-debug.aar
unityLibrary/src/main/: AndroidManifest.xml
unityLibrary/src/main/java/com/unity3d/player/: UnityPlayerActivity.java
unityLibrary/src/main/res/values/: strings.xml
unitybridge/: build.gradle  unitybridge-debug.apk
unitybridge/src/main/: AndroidManifest.xml
unitybridge/src/main/proto/: msg.proto
unitybridge/src/main/res/layout/: activity_camera_demo.xml  activity_main.xml
unitybridge/src/main/res/values/: strings.xml  themes.xml
unitybridge/src/main/res/values-night/: themes.xml
unityhook/: CMakeLists.txt  build.gradle
unityhook/src/main/: AndroidManifest.xml
unityhook/src/main/cpp/: libglutil.cpp
(+40 files in other folders)
